Name:                xhb-mapping-state
Version:             0.1
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library

  exposed-modules:   Graphics.XHB.MappingState
                   , Graphics.XHB.MappingState.Internal

  build-depends:     base
                   , xhb
                   , xhb-keysyms
                   , xhb-monad
                   , array
                   , containers
                   , transformers
                   , mtl
